no-jira: fix rs in forum course element preview